# rental-ai-assistant

./: .gitignore  ReadMe.md  app.db-shm  app.db-wal  pyproject.toml  qaisar_tests.sh  test_end_to_end.sh
data/: memory_store.json
data/chroma_store/: chroma.sqlite3
data/profiles/: error.nodoc_at_example.com.json  income.payslip_at_example.com.json  nsw.tester_at_example.com.json  t_at_example.com.json  vic.tester_at_example.com.json
docs/: AiRentalApplicationSystem.docx  database_migration.txt
scripts/: seed_chromadb.py
src/snug/: graph.py  graph_multi.py  logging copy.py  logging.py  settings.py  state_config.py
src/snug/agents/: canonical_agent.py  compliance_agent.py  doc_agent.py  doc_processor.py  guardrails_agent.py  intent_agent.py  memory_agent copy.py  memory_agent.py  profile_agent.py  rag_agent copy.py  rag_agent.py  reason_agent.py  response_agent.py
src/snug/ai/: extractor.py  prompts.py
src/snug/api/: app.py
src/snug/config/: state_rules.json
src/snug/core/: audit.py  cache.py  db.py  profile_manager.py  seed_chroma.py  vector_db.py
src/snug/domain/: models.py
src/snug/mcp/: schema.py
src/snug/rag/: vector.py
tests/: app.db  conftest.py  test_api.py  test_applications_api.py  test_code_db.py  test_compliance_agent.py  test_document_service.py  test_guardrails_agent.py  test_multiagent_integration.py  test_profile_service.py  test_rag_agent.py  test_response_agent.py
tests/data/: memory_store.json
tests/integration/: test_api_applications.py
tests/unit/: test_intent_agent.py  test_state_validator.py
(+5 files in other folders)
