[tool.poetry]
name = "snug-rental-ai"
version = "0.1.0"
description = ""
authors = ["QJK Consultants <qjkconsultants@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.13"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
python-multipart = "^0.0.20"
langgraph = "^1.0.2"
langchain = "^1.0.5"
langchain-openai = "^1.0.2"
openai = "^2.7.1"
pymilvus = "^2.6.3"
pdfplumber = "^0.11.7"
python-docx = "^1.2.0"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
pillow = "^12.0.0"
orjson = "^3.11.4"
structlog = "^25.5.0"
loguru = "^0.7.3"
tenacity = "^9.1.2"
sqlalchemy = "^2.0.44"
databases = "^0.9.0"
aiosqlite = "^0.21.0"
redis = "^7.0.1"
reportlab = "^4.4.4"
faker = "^37.12.0"
torch = "2.2.2"
numpy = "<2.0"
python-dotenv = "^1.2.1"
aiofiles = "^25.1.0"
sentence-transformers = "^5.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
black = "^25.9.0"
ruff = "^0.14.4"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
